# django-graphql-template

./: .gitignore  MUTATIONS.md  QUERIES.md  README.md  fixture.json  manage.py  pyproject.toml
django_graphql_template/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
django_graphql_template/template_app/: admin.py  apps.py  models.py  schema.py
django_graphql_template/template_app/migrations/: 0001_initial.py
