[tool.poetry]
name = "django-graphql-template"
version = "0.1.0"
description = ""
authors = ["Dakota Madden-Fong <maddenfong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.1"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
